--- a/backend/templates/Despre.html
+++ b/backend/templates/Despre.html
@@ -88,19 +88,19 @@
                         <div id="despreTL">
                             <h3>Lideri de echipă</h3>
                             <hr>
-                            <table width="400px">
+                            <table width="420px">
                                 <tr>
-                                    <td class="l">Front-end</td>
+                                    <td class="l">Interfață</td>
                                     <td class="m">—</td>
                                     <td class="r">Balan Onisim</td>
                                 </tr>
                                 <tr>
-                                    <td class="l">Back-end</td>
+                                    <td class="l">Tranzacții</td>
                                     <td class="m">—</td>
-                                    <td class="r">Thomas Wild</td>
+                                    <td class="r">Wild Thomas-David</td>
                                 </tr>
                                 <tr>
-                                    <td class="l">Blockchain/CTO</td>
+                                    <td class="l">Blockchain / CTO</td>
                                     <td class="m">—</td>
                                     <td class="r">Gusatu Cristian-Alexandru</td>
                                 </tr>
@@ -112,40 +112,62 @@
                                 <tr>
                                     <td class="l">Block</td>
                                     <td class="m">—</td>
-                                    <td class="r">Alexandru-Ionut</td>
+                                    <td class="r">Bran Alexandru-Ionut</td>
                                 </tr>
                             </table>
                         </div>
-                        <div id="despreTeam">
-                            <div id="despreFE">
-                                <h3>Echipa Front-end</h3>
+                        <div id="despreTeamTop">
+                            <div id="despreUI">
+                                <h3>Echipa Interfață</h3>
                                 <hr>
                                     <p>Petcu Bogdan</p>
-                                    <p>Ilies Octavian</p>
-                                    <p>Frincu Denis</p>
+                                    <p>Ilieș Octavian-Paul</p>
+                                    <p>Frincu Denis-Theodor</p>
                                     <p>Haiosta Michelle</p>
-                                    <p>Carcea Gabriel</p>
-                                    <p>Tudor Mateian</p>
+                                    <p>Carcea Gabriel-Costel</p>
+                                    <p>Mateian Tudor-Marian</p>
                             </div>
-                            <div id="despreBC">
-                                <h3>Echipa Block</h3>
-                                <hr>
-                                    <p>Petcu Bogdan</p>
-                                    <p>Ilies Octavian</p>
-                                    <p>Frincu Denis</p>
-                                    <p>Haiosta Michelle</p>
-                                    <p>Carcea Gabriel</p>
-                                    <p>Tudor Mateian</p>
-                            </div>
+                              <div id="despreTeamMid">
+                                <div id="despreBC">
+                                      <h3>Echipa Block</h3>
+                                      <hr>
+                                          <p>Soare Ștefan-Dan</p>
+                                          <p>Șeremet Ion</p>
+                                          <p>Baltaretu Cătălin-Alexandru</p>
+                                          <p>Bradea Vlad-Gabriel</p>
+                                          <p>Cercelaru Constantin-Cătălin</p>
+                                          <p>Gusutoaie Ovidiu-Marius</p>
+                                </div>
+                              </div>
                             <div id="despreBK">
                                 <h3>Echipa Blockchain</h3>
                                 <hr>
-                                    <p>Petcu Bogdan</p>
-                                    <p>Ilies Octavian</p>
-                                    <p>Frincu Denis</p>
-                                    <p>Haiosta Michelle</p>
-                                    <p>Carcea Gabriel</p>
-                                    <p>Tudor Mateian</p>
+                                    <p>Petreanu Cezar</p>
+                                    <p>Kutnik Andrea-Virág</p>
+                                    <p>Coruian Aurel-Ionuț</p>
+                                    <p>Petrescu Cristian Emanuele</p>
+                                    <p>Smarandache Grigorie-Theodor</p>
+                                    <p>Rosu Cristiano</p>
+                            </div>
+                        </div>
+                        <div id="despreTeamBot">
+                            <div id="despreKY">
+                                <h3>Echipa Tranzacții</h3>
+                                <hr>
+                                    <p>Florescu Florin-Titel</p>
+                                    <p>Blidaru Ionuț-Marian</p>
+                                    <p>Anghel Costel-Junior</p>
+                                    <p>Iacoviță Cristian Eduard</p>
+                                    <p>Gauca Tudor - Ionut</p>
+                            </div>
+                            <div id="despreTS">
+                                <h3>Echipa Testare</h3>
+                                <hr>
+                                    <p>Bara Alexandru Cristian</p>
+                                    <p>Raduletu Petre-Horia</p>
+                                    <p>Gozman Vlad</p>
+                                    <p>Fărtan Nicoleta</p>
+                                    <p>Koczi Eduard</p>
                             </div>
                         </div>
                     </div>
