--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -64,7 +64,7 @@
     <div id="container">
       <div id="banner"></div>
       <div class="menu">
-        <a href="logareC.html" class="linkLogo">
+        <a href="/" class="linkLogo">
           <img src="{{ url_for('static',filename='images/logo.svg') }}" height="72px" />
           <div class="nameLogo">VoteBoat</div>
         </a>
