--- a/backend/templates/verificaEmail.html
+++ b/backend/templates/verificaEmail.html
@@ -102,9 +102,10 @@
               <div id="continut2">
                 <div style="padding: 0px 20px 20px 20px">
                   <div id="login" class="confirm">
-                    <p class="titlu">Verifica inbox.</p>
+                    <p class="titlu">Verifică inbox.</p>
                     <img
-                      src="{{ url_for('static',filename='images/email-verificare.svg') }}"
+                      class="svgWhite"
+                      src="{{ url_for('static',filename='images/mailCheck.svg') }}"
                       height="80px"
                     />
                   </div>
