Added textbox to Votare.html
Votare.html and confirmarevot.html have textboxes for text to go in them

Votare.html -- ID = titluVot
confirmarevot.html -- ID = linkVot

:moyai:

--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -73,7 +73,8 @@
       <div id="continut1">
         <div id="listavotare">
           <div id="detaliivot">
-            <h2>Votează — |Nume Vot| </h2>
+              <label for="titluVot" class="sr-only">Titlu</label>
+              <input type="text" class="form-control-plaintext" id="titluVot" value="Title go here" readonly disabled>
             <hr>
           </div>
           <div id="optiunivot">
