--- a/backend/templates/confirmarevot.html
+++ b/backend/templates/confirmarevot.html
@@ -84,7 +84,7 @@
                     </div>
                     <div class="form-group mx-sm-3 mb-2">
                       <label for="linkVot" class="sr-only">Link</label>
-                      <input type="text" class="form-control-plaintext" id="linkVot" value="somelinktosome.site" readonly>
+                      <input type="text" class="form-control-plaintext" id="linkVot" value="somelinktosome.site" readonly disabled>
                     </div>
                     <img id="copytoclipboard" src="{{ url_for('static',filename='images/copyClipboard.svg') }}" height="24px" />
                   </form>
