Added functionality to the copy button
confirmarevot.html
- Added functionality to the copy to clipboard button
Script is inside html if needed to be moved :)

:moyai:

--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -624,9 +624,26 @@ a.linkLogo:link, a.linkLogo:visited, a.linkLogo:hover, a.linkLogo:active {
   font-weight: 600;
 }
 
+.linkTitle {
+  vertical-align: middle;
+  margin-top: 6px;
+}
+
+#linkVot {
+  text-align: left;
+  vertical-align: middle;
+  height: 20px;
+}
+
 #titluVot {
   font-size: 32px;
   width: auto;
   text-align: center;
   color:rgb(37, 59, 136);
+}
+
+#copyICN {
+  display: inline-flex;
+  margin-top: -6px;
+  cursor: pointer;
 }
