--- a/backend/templates/confirmarevot.html
+++ b/backend/templates/confirmarevot.html
@@ -80,13 +80,17 @@
 									<img src= "{{ url_for('static',filename='images/check.svg') }}" height="80px" />
                   <form class="form-inline">
                     <div class="form-group mb-2">
-                      <h5>Link către pagina de vot: </h5>
+                      <h5 class="linkTitle">Link către pagina de vot: </h5>
                     </div>
                     <div class="form-group mx-sm-3 mb-2">
                       <label for="linkVot" class="sr-only">Link</label>
                       <input type="text" class="form-control-plaintext" id="linkVot" value="somelinktosome.site" readonly disabled>
                     </div>
-                    <img id="copytoclipboard" src="{{ url_for('static',filename='images/copyClipboard.svg') }}" height="24px" />
+                    <a onclick="Clipboard()">
+                      <div id="copyICN">
+                        <img id="copytoclipboard" src="{{ url_for('static',filename='images/copyClipboard.svg') }}" height="24px" />
+                      </div>
+                    </a>
                   </form>
 								</div>
 							</div>
@@ -118,5 +122,13 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script>
+  function Clipboard() {
+    var link = document.getElementById("linkVot");
+    link.select();
+    navigator.clipboard.writeText(link.value);
+    alert("Link-ul a fost copiat");
+  }
+</script>
 </body>
 </html>
