am facut sa mearga enter-ul la adaugare optiuni si se dea alert cand formularul nu este completat

--- a/backend/templates/newPoll.html
+++ b/backend/templates/newPoll.html
@@ -123,7 +123,7 @@
                             </div>
                             <div class="btnopt">
                               <button
-                                type="button"
+                                type="submit"
                                 id="addBtn"
                                 class="btn btn-primary btnAlignLNP"
                               >
