--- a/backend/templates/verificaEmail.html
+++ b/backend/templates/verificaEmail.html
@@ -102,9 +102,9 @@
               <div id="continut2">
                 <div style="padding: 0px 20px 20px 20px">
                   <div id="login" class="confirm">
-                    <p class="titlu">Verifică inbox.</p>
+                    <p class="titlu">Verifică e-mail</p>
                     <img
-                      class="svgWhite"
+                      class="svgGreen"
                       src="{{ url_for('static',filename='images/mailCheck.svg') }}"
                       height="80px"
                     />
