--- a/backend/templates/Despre.html
+++ b/backend/templates/Despre.html
@@ -92,7 +92,7 @@
                                 <tr>
                                     <td class="l">Interfață</td>
                                     <td class="m">—</td>
-                                    <td class="r">Balan Onisim</td>
+                                    <td class="r">Bălan Onisim</td>
                                 </tr>
                                 <tr>
                                     <td class="l">Tranzacții</td>
@@ -102,7 +102,7 @@
                                 <tr>
                                     <td class="l">Blockchain / CTO</td>
                                     <td class="m">—</td>
-                                    <td class="r">Gusatu Cristian-Alexandru</td>
+                                    <td class="r">Gușatu Cristian-Alexandru</td>
                                 </tr>
                                 <tr>
                                     <td class="l">Testing</td>
@@ -112,7 +112,7 @@
                                 <tr>
                                     <td class="l">Block</td>
                                     <td class="m">—</td>
-                                    <td class="r">Bran Alexandru-Ionut</td>
+                                    <td class="r">Bran Alexandru-Ionuț</td>
                                 </tr>
                             </table>
                         </div>
@@ -122,7 +122,7 @@
                                 <hr>
                                     <p>Petcu Bogdan</p>
                                     <p>Ilieș Octavian-Paul</p>
-                                    <p>Frincu Denis-Theodor</p>
+                                    <p>Frîncu Denis-Theodor</p>
                                     <p>Haiosta Michelle</p>
                                     <p>Carcea Gabriel-Costel</p>
                                     <p>Mateian Tudor-Marian</p>
@@ -136,7 +136,7 @@
                                           <p>Baltaretu Cătălin-Alexandru</p>
                                           <p>Bradea Vlad-Gabriel</p>
                                           <p>Cercelaru Constantin-Cătălin</p>
-                                          <p>Gusutoaie Ovidiu-Marius</p>
+                                          <p>Gușutoaie Ovidiu-Marius</p>
                                 </div>
                               </div>
                             <div id="despreBK">
@@ -147,7 +147,7 @@
                                     <p>Coruian Aurel-Ionuț</p>
                                     <p>Petrescu Cristian Emanuele</p>
                                     <p>Smarandache Grigorie-Theodor</p>
-                                    <p>Rosu Cristiano</p>
+                                    <p>Roșu Cristiano</p>
                             </div>
                         </div>
                         <div id="despreTeamBot">
@@ -163,8 +163,8 @@
                             <div id="despreTS">
                                 <h3>Echipa Testare</h3>
                                 <hr>
-                                    <p>Bara Alexandru Cristian</p>
-                                    <p>Raduletu Petre-Horia</p>
+                                    <p>Bâra Alexandru Cristian</p>
+                                    <p>Rădulețu Petre-Horia</p>
                                     <p>Gozman Vlad</p>
                                     <p>Fărtan Nicoleta</p>
                                     <p>Koczi Eduard</p>
