--- a/backend/templates/Votare.html
+++ b/backend/templates/Votare.html
@@ -57,61 +57,9 @@
               <hr>
             </div>
             <div id="optiunivot">
-              <input type="radio" id="optVot" name="OPV" value="Opt1">
- 
-              <label for="Opt1">This</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt2">
- 
-              <label for="Opt2">is</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt3">
- 
-              <label for="Opt3">a</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt4">
- 
-              <label for="Opt4">story</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt5">
- 
-              <label for="Opt5">all</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt6">
- 
-              <label for="Opt6">about</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt7">
- 
-              <label for="Opt7">how</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt8">
- 
-              <label for="Opt8">my</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt9">
- 
-              <label for="Opt9">life</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt10">
- 
-              <label for="Opt10">got</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt11">
- 
-              <label for="Opt11">flip-turned</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt12">
- 
-              <label for="Opt12">upside</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt13">
- 
-              <label for="Opt13">down</label>
-              <br>
-              <input type="radio" id="optVot" name="OPV" value="Opt14">
- 
-              <label for="Opt14">Aceasta este o opțiune extrem de lungă pentru a demonstra scoll orizontal.</label>
+              <ol id="listaOptiuni">
+
+              </ol>
             </div>
             <div class="btnvotare">
               <button type="button" class="btn btn-lg btn-primary" disabled="disabled" id="Voteaza">Votează</button>
