--- a/backend/templates/rezultate.html
+++ b/backend/templates/rezultate.html
@@ -49,6 +49,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   <link rel="stylesheet" href= "{{ url_for('static',filename='css/style.css') }}" type="text/css" media="all" />
+  <link rel="stylesheet" href= "{{ url_for('static',filename='css/togglebutton.css') }}" type="text/css" media="all" />
   <link rel="stylesheet" href= "{{ url_for('static',filename='css/animatie.css') }}" type="text/css" media="all" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -89,21 +90,26 @@
   
                           <!-- Container chart -->
                           <div>
-  
+
                               <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                               <canvas id="chart_voturi">
+
                           </div>
-                          
+
+                          <!-- Sort toggle button -->
+                          <!-- Butonul de toggle ar trebui sa fie sub tabel, in centru -->
+                          <!-- Cand e gata css-ul, da-mi mesaj sa-i bag js -->
+
                           <h5>Detalii</h5>
                           <div id="continutRezultate_detalii">
                               <p>Nr. total de voturi: <span id="nrTotalVoturi"></span> </p>
                               <p>Castigator: <span id="castigatori"></span></p>
 
 
-                              <!-- Chart script -->
-
+                              
+                          <!-- Chart script -->
                           <script src="{{url_for('static',filename='js/jsfrontend/rezultate.js')}}"></script>
-                        <!-- End of Chart script -->
+                          <!-- End of Chart script -->
 
 
 
